--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
     <title>Bootstrap - Prebuilt Layout</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+	<link href="{{ url_for('static', filename='css/bootstrap-4.4.1.css') }}" rel="stylesheet">
 
   </head>
   <body>
@@ -65,7 +66,7 @@
        <div class="row">
           <div class="col-md-4">
              <div class="card">
-                <img class="card-img-top" src="images/card-img.png" alt="Card image cap">
+                <img class="card-img-top" src="{{ url_for('static', filename='images/card-img.png') }}" alt="Card image cap">
                 <div class="card-body">
                    <h4 class="card-title">Card title</h4>
                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -99,7 +100,7 @@
           </div>
           <div class="col-md-4">
              <div class="card">
-                <img class="card-img-top" src="images/card-img.png" alt="Card image cap">
+                <img class="card-img-top" src="{{ url_for('static', filename='images/card-img.png') }}" alt="Card image cap">
                 <div class="card-body">
                    <h5 class="card-title">Card title</h5>
                    <p class="card-text">Some text to build on the card's content.</p>
@@ -150,15 +151,15 @@
        <div class="row">
           <div class="text-center col-lg-6 offset-lg-3">
              <h4>Footer </h4>
-             <p>Copyright &copy; 2019 &middot; All Rights Reserved &middot; <a href="#" >My Website</a></p>
+             <p>Copyright &copy; 2020 &middot; All Rights Reserved &middot; <a href="#" >My Website</a></p>
           </div>
        </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
 
     <!-- Include all compiled plugins (below), or include individual files as needed --> 
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap-4.4.1.js"></script>
+    <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap-4.4.1.js') }}"></script>
   </body>
 </html>
